# eze-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  wallet_data.txt
model/: prompt.json
models/: schemas.py
src/: agent.py  chatbot.py  checker.py  rules.py  wallet.py
test/: wallet.t.py
